<resources>
    <string name="app_name">Meal Plan</string>
    <string name="set_date">Select a Date to Meal Plan For:</string>
    <string name="selection_title"><u>Select a Meal:</u></string>
    <string name="add_meal_hint">Meal Name...</string>
    <string name="add_meal_btn">Add a Meal</string>
    <string name="date_select">Select Date</string>
    <string name="meal_description">Description...</string>
    <string name="meal_notes">Notes (optional)</string>
    <string name="meal_url">URL (optional)</string>
    <string name="ingredients">Ingredients:</string>
    <string name="add_ingredient_btn">+</string>
    <string name="nutrition_information_label">Nutritional Information:</string>
    <string name="select_recipe">Select a Recipe</string>
    <string name="manage_recipes">Manage Recipes</string>
    <string name="save_meal">Save Meal</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="search_recipe">Find a Recipe...</string>
    <string name="search_ingredient">Find an Ingredient...</string>
    <string name="search_btn">Search</string>
    <string name="add_recipe_btn">Add Recipe</string>


    <string name="search_error">Oops! Something went wrong. Please check your internet connection and try again</string>

    <string name="label_calendar_selection">Select a Date</string>
    <string name="label_meal_selection">Select a Meal</string>
    <string name="label_recipe_selection">Select a Recipe</string>
    <string name="label_ingredients_selection">Search Ingredients</string>
    <string name="label_meal_form">Build a Meal</string>
    <string name="label_recipe_form">Build a Recipe</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="add_ingredients_btn">Add Ingredients</string>
    <string name="clear_btn">Clear</string>
</resources>