<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/calendar_selection">
    <fragment
        android:id="@+id/calendar_selection"
        android:name="com.example.mealplan.ui.CalendarSelectionFragment"
        android:label="@string/label_calendar_selection">
        <action
            android:id="@+id/navigate_from_calendar_selection_to_meal_selection"
            app:destination="@id/meal_selection"/>
        <action
            android:id="@+id/navigate_from_calendar_selection_to_recipe_selection"
            app:destination="@id/recipe_selection"/>
    </fragment>
    <fragment
        android:id="@+id/ingredients_selection"
        android:name="com.example.mealplan.ui.IngredientsSelectionFragment"
        android:label="@string/label_ingredients_selection">
        <argument
            android:name="meal"
            app:argType="com.example.mealplan.data.Meal"
            app:nullable="true"/>
        <argument
            android:name="recipe"
            app:argType="com.example.mealplan.data.Recipe"
            app:nullable="true"/>
        <action
            android:id="@+id/navigate_from_ingredients_selection_to_meal_form"
            app:destination="@id/meal_form"/>
        <action
            android:id="@+id/navigate_from_ingredients_selection_to_recipe_form"
            app:destination="@id/recipe_form"/>
    </fragment>
    <fragment
        android:id="@+id/meal_selection"
        android:name="com.example.mealplan.ui.MealSelectionFragment"
        android:label="@string/label_meal_selection">
        <argument
            android:name="date"
            app:argType="string"/>
        <action
            android:id="@+id/navigate_from_meal_selection_to_meal_form"
            app:destination="@id/meal_form"/>
    </fragment>
    <fragment
        android:id="@+id/recipe_selection"
        android:name="com.example.mealplan.ui.RecipeSelectionFragment"
        android:label="@string/label_recipe_selection">
        <argument
            android:name="origin"
            app:argType="string"/>
        <argument
            android:name="meal"
            app:argType="com.example.mealplan.data.Meal"
            app:nullable="true"/>
        <action
            android:id="@+id/navigate_from_recipe_selection_to_recipe_form"
            app:destination="@id/recipe_form"/>
        <action
            android:id="@+id/navigate_from_recipe_selection_to_meal_form"
            app:destination="@id/meal_form"/>
    </fragment>
    <fragment
        android:id="@+id/meal_form"
        android:name="com.example.mealplan.ui.MealFragment"
        android:label="@string/label_meal_form">
        <argument
            android:name="meal"
            app:argType="com.example.mealplan.data.Meal"/>
        <action
            android:id="@+id/navigate_from_meal_form_to_recipe_selection"
            app:destination="@id/recipe_selection"/>
        <action
            android:id="@+id/navigate_from_meal_form_to_meal_selection"
            app:destination="@id/meal_selection"/>
        <action
            android:id="@+id/navigate_from_meal_form_to_ingredients_selection"
            app:destination="@id/ingredients_selection"/>
    </fragment>
    <fragment
        android:id="@+id/recipe_form"
        android:name="com.example.mealplan.ui.RecipeFragment"
        android:label="@string/label_recipe_form">
        <argument
            android:name="recipe"
            app:argType="com.example.mealplan.data.Recipe"
            app:nullable="true"/>
        <action
            android:id="@+id/navigate_from_recipe_form_to_recipe_selection"
            app:destination="@id/recipe_selection"/>
        <action
            android:id="@+id/navigate_from_recipe_form_to_ingredients_selection"
            app:destination="@id/ingredients_selection"/>
    </fragment>
</navigation>