<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <TextView
        android:id="@+id/selection_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selection_title"
        app:layout_constraintBottom_toTopOf="@id/selection_date"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/selection_date"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/selection_title"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/selection_date">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_meals"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </FrameLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_meal_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/add_meal_btn"
        android:layout_gravity="center"
        android:hint="@string/add_meal_hint">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/add_meal_txt"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_meal_btn"
        android:id="@+id/add_meal_btn"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>