<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.textfield.TextInputLayout
        app:startIconDrawable="@drawable/ic_baseline_search_24"
        app:endIconDrawable="@drawable/ic_baseline_clear_24"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="clear_text"
        android:id="@+id/recipe_search_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center"
        android:hint="@string/search_recipe"
        android:textColorHint="@color/black"
        app:hintTextColor="@color/purpleNightPrimary"

        app:boxStrokeWidth="2dp"
        app:boxStrokeColor="@color/black"
        android:paddingHorizontal="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/recipe_search_text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:id="@+id/recipe_search_btn_ctnr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/recipe_search_field"
        app:layout_constraintLeft_toLeftOf="@id/recipe_search_field"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/recipe_search_btn"
            android:layout_width="100dp"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/search_btn"
            app:layout_constraintTop_toBottomOf="@id/recipe_search_field"
            tools:ignore="MissingConstraints"/>
        <Button
            android:id="@+id/recipe_clear_btn"
            android:layout_width="100dp"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/clear_btn"
            app:layout_constraintTop_toBottomOf="@id/recipe_search_field"
            tools:ignore="MissingConstraints"/>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/recipe_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/recipe_search_btn_ctnr">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipes_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/divider_container"
        app:layout_constraintTop_toBottomOf="@id/recipe_container">
        <View
            android:layout_width="365dp"
            android:id="@+id/recipe_divider"
            android:layout_height="1dp"
            android:background="@color/black"
            android:paddingHorizontal="15dp"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_recipe_btn"
        android:text="@string/add_recipe_btn"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>